syntax = "proto3";

package api;

option go_package = "grpc.client";

service Splitter {
  rpc SplitData (SplitDataRequest) returns (SplitDataResponse) {}
}

message SplitDataRequest {
  string bytes = 1;
  string filename = 2;
}

message SplitDataResponse {
  string id = 1;
}
